--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú – Cantina Chilo Buenos Aires</title>
-    <link rel="stylesheet" href="Estilos/Estilomen.css">
+    <link rel="stylesheet" href="Estilos/menu.css">
 </head>
 
 <body>
